--- a/Pages/productos-usados.html
+++ b/Pages/productos-usados.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
@@ -58,56 +58,56 @@
             <div class="product-box">
                 <img src="../img/notebook1.jpg">
                 <div class="product-tittle">
-                    <h3>Auriculares</h3>
+                    <h3>Notebook Gamer</h3>
                 </div>
             </div>
 
             <div class="product-box">
                 <img src="../img/cooler fan.jpg">
                 <div class="product-tittle">
-                    <h3>Fuente</h3>
+                    <h3>Cooler</h3>
                 </div>
             </div>
 
             <div class="product-box">
                 <img src="../img/kingston.jpg">
                 <div class="product-tittle">
-                    <h3>Gabinete Gamer/h3>
+                    <h3>Disco SSD</h3>
                 </div>
             </div>
 
             <div class="product-box">
                 <img src="../img/microfono.jpg">
                 <div class="product-tittle">
-                    <h3>Notebook</h3>
+                    <h3>Microfono</h3>
                 </div>
             </div>
 
             <div class="product-box">
                 <img src="../img/1650.jpg">
                 <div class="product-tittle">
-                    <h3>Mando de Xbox</h3>
+                    <h3>Tarjeta de video 1660</h3>
                 </div>
             </div>
 
             <div class="product-box">
                 <img src="../img/ducky.jpg">
                 <div class="product-tittle">
-                    <h3>RTX 4080 </h3>
+                    <h3>Teclado Gamer </h3>
                 </div>
             </div>
 
             <div class="product-box">
                 <img src="../img/celular.jpg">
                 <div class="product-tittle">
-                    <h3>Memoria Ram</h3>
+                    <h3>Celular Xiomi</h3>
                 </div>
             </div>
 
             <div class="product-box">
                 <img src="../img/mousepad.jpg">
                 <div class="product-tittle">
-                    <h3>Mouse G pro</h3>
+                    <h3>Mousepad</h3>
                 </div>
             </div>
 
