--- a/Pages/login.html
+++ b/Pages/login.html
@@ -3,18 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iniciar sesion</title>
+    <meta name="title" content="Manos a la PC" />
+    <meta name="description" content="Tienda de hardware y servicio técnico a domicilio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://brianguzman2005.github.io/Brianguzman.github.io/" />
+    <meta property="og:title" content="Manos a la PC" />
+    <meta property="og:description" content="Tienda de hardware y servicio técnico a domicilio" />
+    <meta property="og:image" content="../img/manos.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://brianguzman2005.github.io/Brianguzman.github.io/" />
+    <meta property="twitter:title" content="Manos a la PC" />
+    <meta property="twitter:description" content="Tienda de hardware y servicio técnico a domicilio" />
+    <meta property="twitter:image" content="../img/manos.png" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
+
+    <link rel="icon" href="../img/manos.png" type="img/png" alt="logo">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../img/qweqeqwe.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="../img/manos.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     Manos a la PC
                 </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,8 +101,8 @@
                         <div class="footer-links">
                             <h4>Seguinos en redes</h4>
                             <div class="Social-link">
-                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="/img/iconfinder-social-media-applications-3instagram-4102579_113804.png" type="png"></a>
-                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="/img/iconfinder-social-media-applications-1facebook-4102573_113807.png" type="png"></a>
+                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="/img/iconfinder-social-media-applications-3instagram-4102579_113804.png" type="png" alt="Instagram"></a>
+                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="/img/iconfinder-social-media-applications-1facebook-4102573_113807.png" type="png" alt="facebook"></a>
                             </div>
                         </div>
                         <div class="footer-links">
