--- a/Pages/productos-usados.html
+++ b/Pages/productos-usados.html
@@ -3,18 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productos usados</title>
+    <meta name="title" content="Manos a la PC" />
+    <meta name="description" content="Tienda de hardware y servicio técnico a domicilio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://brianguzman2005.github.io/Brianguzman.github.io/" />
+    <meta property="og:title" content="Manos a la PC" />
+    <meta property="og:description" content="Tienda de hardware y servicio técnico a domicilio" />
+    <meta property="og:image" content="../img/manos.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://brianguzman2005.github.io/Brianguzman.github.io/" />
+    <meta property="twitter:title" content="Manos a la PC" />
+    <meta property="twitter:description" content="Tienda de hardware y servicio técnico a domicilio" />
+    <meta property="twitter:image" content="../img/manos.png" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
+
+    <link rel="icon" href="../img/manos.png" type="img/png" alt="logo">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../img/qweqeqwe.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="../img/manos.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     Manos a la PC
                 </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,64 +67,54 @@
 
     <h2>Productos usados</h2>
     <section class="Gallery__nuevos--ingresos">
-        
-
             <div class="product-box">
-                <img src="../img/notebook1.jpg">
+                <img src="../img/notebook1.jpg" alt="Notebook">
                 <div class="product-tittle">
-                    <h3>Auriculares</h3>
+                    <h3>Notebook Gamer</h3>
                 </div>
             </div>
-
             <div class="product-box">
-                <img src="../img/cooler fan.jpg">
+                <img src="../img/cooler fan.jpg" alt="Cooler">
                 <div class="product-tittle">
-                    <h3>Fuente</h3>
+                    <h3>Cooler</h3>
                 </div>
             </div>
-
             <div class="product-box">
-                <img src="../img/kingston.jpg">
+                <img src="../img/kingston.jpg" alt="Disco SSD">
                 <div class="product-tittle">
-                    <h3>Gabinete Gamer/h3>
+                    <h3>Disco SSD</h3>
                 </div>
             </div>
-
             <div class="product-box">
-                <img src="../img/microfono.jpg">
+                <img src="../img/microfono.jpg" alt="Microfono">
                 <div class="product-tittle">
-                    <h3>Notebook</h3>
+                    <h3>Microfono</h3>
                 </div>
             </div>
-
             <div class="product-box">
-                <img src="../img/1650.jpg">
+                <img src="../img/1650.jpg" alt="Tarjeta 1660">
                 <div class="product-tittle">
-                    <h3>Mando de Xbox</h3>
+                    <h3>Tarjeta de video 1660</h3>
                 </div>
             </div>
-
             <div class="product-box">
-                <img src="../img/ducky.jpg">
+                <img src="../img/ducky.jpg" alt="Teclado Gamer">
                 <div class="product-tittle">
-                    <h3>RTX 4080 </h3>
+                    <h3>Teclado Gamer </h3>
                 </div>
             </div>
-
             <div class="product-box">
-                <img src="../img/celular.jpg">
+                <img src="../img/celular.jpg" Alt="Celular Xiomi">
                 <div class="product-tittle">
-                    <h3>Memoria Ram</h3>
+                    <h3>Celular Xiomi</h3>
                 </div>
             </div>
-
             <div class="product-box">
-                <img src="../img/mousepad.jpg">
+                <img src="../img/mousepad.jpg" alt="Mousepad">
                 <div class="product-tittle">
-                    <h3>Mouse G pro</h3>
+                    <h3>Mousepad</h3>
                 </div>
             </div>
-
         </section>
 
             <footer class="footer">
@@ -133,8 +137,8 @@
                         <div class="footer-links">
                             <h4>Seguinos en redes</h4>
                             <div class="Social-link">
-                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="/img/iconfinder-social-media-applications-3instagram-4102579_113804.png" type="png"></a>
-                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="/img/iconfinder-social-media-applications-1facebook-4102573_113807.png" type="png"></a>
+                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="/img/iconfinder-social-media-applications-3instagram-4102579_113804.png" type="png" alt="Instagram"></a>
+                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="/img/iconfinder-social-media-applications-1facebook-4102573_113807.png" type="png" alt="facebook"></a>
                             </div>
                         </div>
                         <div class="footer-links">
