--- a/Pages/productos-nuevos.html
+++ b/Pages/productos-nuevos.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../img/manos.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="../img/manos.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top" >
                     Manos a la PC
                 </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,20 +37,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="../Pages/Servicio-tecnico.html">Servicio Tecnico</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../Pages/Arma-tu-pc.html">Arma tu PC</a>
+                    <a class="nav-link" href="servicio-tecnico.html">Servicio Tecnico</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Productos
                     </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="../Pages/productos-nuevos.html">Nuevos</a></li>
-                    <li><a class="dropdown-item" href="../Pages/productos-usados.html">Usados</a></li>
+                    <li><a class="dropdown-item" href="productos-nuevos.html">Nuevos</a></li>
+                    <li><a class="dropdown-item" href="productos-usados.html">Usados</a></li>
                     <li><hr class="dropdown-divider"></li>
                     </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="signup.html">Registrarte</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="login.html">Iniciar sesion</a>
@@ -67,7 +67,7 @@
 
 
     <h2>Productos nuevos</h2>
-    <section class="Gallery__nuevos--ingresos">
+    <section class="gallery__nuevos--ingresos">
         
 
             <div class="product-box">
@@ -87,7 +87,7 @@
             <div class="product-box">
                 <img src="../img/gabinete.jpg" alt="Gabinete">
                 <div class="product-tittle">
-                    <h3>Gabinete Gamer/h3>
+                    <h3>Gabinete Gamer</h3>
                 </div>
             </div>
 
