--- a/pages/productos-nuevos.html
+++ b/pages/productos-nuevos.html
@@ -106,21 +106,21 @@
             </div>
 
             <div class="product-box">
-                <img src="../img/rtx 4080.jpg" alt="Tarjeta 4080 TI">
+                <img src="../img/4060.jpg" alt="Tarjeta 4080 TI">
                 <div class="product-tittle">
                     <h3>RTX 4080 </h3>
                 </div>
             </div>
 
             <div class="product-box">
-                <img src="../img/memoria ram.jpg" alt="Memoria Ram">
+                <img src="../img/memoriaram.jpg" alt="Memoria Ram">
                 <div class="product-tittle">
                     <h3>Memoria Ram</h3>
                 </div>
             </div>
 
             <div class="product-box">
-                <img src="../img/g pro.jpg" alt="Mouse G pro">
+                <img src="../img/gpro.jpg" alt="Mouse G pro">
                 <div class="product-tittle">
                     <h3>Mouse G pro</h3>
                 </div>
@@ -148,8 +148,8 @@
                         <div class="footer-links">
                             <h4>Seguinos en redes</h4>
                             <div class="Social-link">
-                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="../img/iconfinder-social-media-applications-3instagram-4102579_113804.png" type="png" alt="Instagram"></a>
-                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="../img/iconfinder-social-media-applications-1facebook-4102573_113807.png" type="png" alt="facebook"></a>
+                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="../img/ig.png" type="png" alt="Instagram"></a>
+                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="../img/fb.png" type="png" alt="facebook"></a>
                             </div>
                         </div>
                         <div class="footer-links">
