--- a/pages/productos-usados.html
+++ b/pages/productos-usados.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="product-box">
-                <img src="../img/cooler fan.jpg" alt="Cooler">
+                <img src="../img/coolerfan.jpg" alt="Cooler">
                 <div class="product-tittle">
                     <h3>Cooler</h3>
                 </div>
@@ -136,8 +136,8 @@
                         <div class="footer-links">
                             <h4>Seguinos en redes</h4>
                             <div class="Social-link">
-                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="../img/iconfinder-social-media-applications-3instagram-4102579_113804.png" type="png" alt="Instagram"></a>
-                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="../img/iconfinder-social-media-applications-1facebook-4102573_113807.png" type="png" alt="facebook"></a>
+                                <a href="https://www.instagram.com/manosalapc/" target="blank"><img src="../img/ig.png" type="png" alt="Instagram"></a>
+                                <a href="https://www.facebook.com/profile.php?id=61562533934094" target="blank"><img src="../img/fb.png" type="png" alt="facebook"></a>
                             </div>
                         </div>
                         <div class="footer-links">
