--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/Servicio-tecnico.html">Servicio Tecnico</a>
+                    <a class="nav-link" href="pages/servicio-tecnico.html">Servicio Tecnico</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
