--- a/pages/productos-usados.html
+++ b/pages/productos-usados.html
@@ -71,41 +71,48 @@
                 <div class="product-tittle">
                     <h3>Notebook Gamer</h3>
                 </div>
+                <div class="precio">$1.000.000</div>
             </div>
             <div class="product-box">
                 <img src="../img/coolerfan.jpg" alt="Cooler">
                 <div class="product-tittle">
                     <h3>Cooler</h3>
                 </div>
+                <div class="precio">$70.000</div>
             </div>
             <div class="product-box">
                 <img src="../img/kingston.jpg" alt="Disco SSD">
                 <div class="product-tittle">
                     <h3>Disco SSD</h3>
                 </div>
+                <div class="precio">$30.000</div>
             </div>
             <div class="product-box">
                 <img src="../img/microfono.jpg" alt="Microfono">
                 <div class="product-tittle">
                     <h3>Microfono</h3>
                 </div>
+                <div class="precio">$70.000</div>
             </div>
             <div class="product-box">
                 <img src="../img/1650.jpg" alt="Tarjeta 1660">
                 <div class="product-tittle">
                     <h3>Tarjeta de video 1660</h3>
                 </div>
+                <div class="precio">$165.000</div>
             </div>
             <div class="product-box">
                 <img src="../img/ducky.jpg" alt="Teclado Gamer">
                 <div class="product-tittle">
                     <h3>Teclado Gamer </h3>
+                    <div class="precio">$120.000</div>
                 </div>
             </div>
             <div class="product-box">
                 <img src="../img/celular.jpg" Alt="Celular Xiomi">
                 <div class="product-tittle">
                     <h3>Celular Xiomi</h3>
+                    <div class="precio">$435.000</div>
                 </div>
             </div>
             <div class="product-box">
@@ -113,6 +120,7 @@
                 <div class="product-tittle">
                     <h3>Mousepad</h3>
                 </div>
+                <div class="precio">$25.000</div>
             </div>
         </section>
 
