--- a/pages/productos-nuevos.html
+++ b/pages/productos-nuevos.html
@@ -75,6 +75,7 @@
                 <div class="product-tittle">
                     <h3>Auriculares</h3>
                 </div>
+                <div class="precio">$130.000</div>
             </div>
 
             <div class="product-box">
@@ -82,6 +83,7 @@
                 <div class="product-tittle">
                     <h3>Fuente</h3>
                 </div>
+                <div class="precio">$60.000</div>
             </div>
 
             <div class="product-box">
@@ -89,6 +91,7 @@
                 <div class="product-tittle">
                     <h3>Gabinete Gamer</h3>
                 </div>
+                <div class="precio">$50.000</div>
             </div>
 
             <div class="product-box">
@@ -96,6 +99,7 @@
                 <div class="product-tittle">
                     <h3>Notebook</h3>
                 </div>
+                <div class="precio">$760.000</div>
             </div>
 
             <div class="product-box">
@@ -103,6 +107,7 @@
                 <div class="product-tittle">
                     <h3>Mando de Xbox</h3>
                 </div>
+                <div class="precio">$120.000</div>
             </div>
 
             <div class="product-box">
@@ -110,6 +115,7 @@
                 <div class="product-tittle">
                     <h3>RTX 4080 </h3>
                 </div>
+                <div class="precio">$320.000</div>
             </div>
 
             <div class="product-box">
@@ -117,6 +123,7 @@
                 <div class="product-tittle">
                     <h3>Memoria Ram</h3>
                 </div>
+                <div class="precio">$60.000</div>
             </div>
 
             <div class="product-box">
@@ -124,6 +131,7 @@
                 <div class="product-tittle">
                     <h3>Mouse G pro</h3>
                 </div>
+                <div class="precio">$100.000</div>
             </div>
 
         </section>
